Made -p (--print) option the default behavior, so very little CLI must be written for the tool to just work